Ajustes no header

--- a/index.html
+++ b/index.html
@@ -7,25 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/viniciusvasc13/globoplay@master/globotipo2.css" />
-    <title>Globoplay</title>
+    <title>Globoplay / Giga Gloob</title>
 </head>
 
 <body>
     <header>
-        <section class="container">
-            <img class="header__logo" src="static/img/logo__globoplay.png" alt="Logo da globoplay" class="logo">
-            <p class="header__p1">
-                UAU! <br class="break"> VOCÊ GANHOU <br> 15% DE DESCONTO
-            </p>
-            <p class="header__p2">
-                NO SEU PRIMEIRO MÊS DE GLOBOPLAY
-            </p>
-            <div class="header__degrade-texto"></div>
-            <div class="header__degrade-borda">
-                <div class="header__n1"></div>
-                <div class="header__n2"></div>
-                <div class="header__n3"></div>
-                <div class="header__n4"></div>
+        <section>
+            <div class="header-backgroud">
+                <div class="container">
+                    <img class="header__logo" src="static/img/logo__globoplay.png" alt="Logo da globoplay" class="logo">
+                    <p class="header__p1">
+                        UAU! <br class="break"> VOCÊ GANHOU <br> 15% DE DESCONTO
+                    </p>
+                    <p class="header__p2">
+                        NO SEU PRIMEIRO MÊS DE GLOBOPLAY
+                    </p>
+                    <div class="header__degrade-texto"></div>
+                </div>
+                <div class="header__degrade-borda">
+                    <div class="header__n1"></div>
+                    <div class="header__n2"></div>
+                    <div class="header__n3"></div>
+                    <div class="header__n4"></div>
+                </div>
             </div>
         </section>
     </header>
